--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,3 +4,11 @@ body, html {
     width: 100%;
     height: 100%;
 }
+
+html {
+    scrollbar-width: thin;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
